# notary

./: CMakeLists.txt  README.md  build.sh  server_config.json  test_crypto_service.cpp  test_notary.sh
config/: server-config.json
doc/: INIT_TARGETS_IMPROVEMENT.md  NEWFILEMETA_IMPLEMENTATION.md  PassphraseRetriever调用流程.md  SIGN_IMPLEMENTATION_SUMMARY.md  TUF_HELPER_FUNCTIONS.md  TUF_SERIALIZATION_SUMMARY.md  TYPE_CORRECTION_SUMMARY.md
doc/ai doc/: CertToKey使用说明.md  Certificate使用说明.md  PassRetriever使用说明.md  TrustPinning使用说明.md  密钥轮转说明.md
include/notary/: repository.hpp  types.hpp
include/notary/changelist/: changelist.hpp
include/notary/client/: repository.hpp  tufclient.hpp
include/notary/crypto/: certificate.hpp  crypto_service.hpp  keys.hpp  sign.hpp  verifiers.hpp  verify.hpp
include/notary/passRetriever/: passRetriever.hpp
include/notary/server/: errors.hpp  server.hpp  types.hpp
include/notary/server/handlers/: validation.hpp
include/notary/storage/: filestore.hpp  httpstore.hpp  key_storage.hpp  keystore.hpp  memorystore.hpp  meta_storage.hpp  metadata_store.hpp  offlinestore.hpp  remote_store.hpp  store.hpp
include/notary/tuf/: builder.hpp  certs.hpp  repo.hpp  trustpinning.hpp
include/notary/utils/: helpers.hpp  logger.hpp  tools.hpp  x509.hpp
src/: CMakeLists.txt  main.cpp  repository.cpp  server_main.cpp  types.cpp
src/changelist/: changelist.cpp
src/client/: delegation.cpp  repository.cpp  tufclient.cpp
src/crypto/: certificate.cpp  certificate_example.cpp  crypto_service.cpp  keys.cpp  sign.cpp  verifiers.cpp  verify.cpp
src/example/: certificate_example.cpp  trustpinning_example.cpp  x509_example.cpp
src/passRetriever/: passRetriever.cpp  passRetriever_example.cpp
src/server/: server.cpp
src/server/errors/: errors.cpp
src/server/handlers/: default.cpp  validation.cpp
src/server/storage/: file_storage.cpp  file_storage.hpp
src/storage/: filestore.cpp  httpstore.cpp  key_storage.cpp  keystore.cpp  memorystore.cpp  meta_storage.cpp  metadata_store.cpp  offlinestore.cpp  remote_storage.cpp  remote_store.cpp  storage.cpp
src/tuf/: builder.cpp  certs.cpp  repo.cpp  trustpinning.cpp
src/utils/: helpers.cpp  logger.cpp  tools.cpp  x509.cpp
test/: CMakeLists.txt  repository_test.cpp  test_builder.cpp  test_passRetriever.cpp  test_verify.cpp
